--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular-esri-map": "^1.1.10",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
+    "bootstrap": "^5.1.3",
     "esri-loader": "^3.3.0",
     "html5-boilerplate": "0.0.1"
   },
