--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "angular": "^1.7.5",
     "angular-esri-map": "^1.1.10",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
+    "angular-ui-bootstrap": "^2.5.6",
     "esri-loader": "^3.3.0",
     "html5-boilerplate": "0.0.1"
   },
