--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/compiler-cli": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/localize": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@popperjs/core": "^2.10.2",
     "angular": "^1.7.5",
     "angular-esri-map": "^1.1.10",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
-    "bootstrap": "^5.1.3",
     "angular-ui-bootstrap": "^2.5.6",
+    "bootstrap": "^5.1.3",
     "esri-loader": "^3.3.0",
-    "html5-boilerplate": "0.0.1"
+    "glob": "^7.2.0",
+    "html5-boilerplate": "0.0.1",
+    "rxjs": "^6.5.3",
+    "typescript": "^4.5.4",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
