--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "angular-esri-map": "^1.1.10",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
-    "bootstrap": "^5.1.3",
     "angular-ui-bootstrap": "^2.5.6",
+    "bootstrap": "^5.1.3",
     "esri-loader": "^3.3.0",
-    "html5-boilerplate": "0.0.1"
+    "html5-boilerplate": "0.0.1",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
