--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "html5-boilerplate": "0.0.1",
     "rxjs": "^6.5.3",
     "typescript": "^4.5.4",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.4",
     "moment": "^2.29.1"
-
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
